--- a/EOls.EPiContentApi.csproj
+++ b/EOls.EPiContentApi.csproj
@@ -172,13 +172,13 @@
     <Compile Include="Converters\LinkItemCollectionPropertyConverter.cs" />
     <Compile Include="Converters\PageReferencePropertyConverter.cs" />
     <Compile Include="Converters\PageTypePropertyConverter.cs" />
-    <Compile Include="Converters\UrlConverter.cs" />
+    <Compile Include="Converters\UrlPropertyConverter.cs" />
     <Compile Include="Extensions\EPiServerExtensions.cs" />
     <Compile Include="Interfaces\IApiPropertyConverter.cs" />
     <Compile Include="Models\ContentModel.cs" />
     <Compile Include="Models\PropertyInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoutesInitializationModule.cs" />
+    <Compile Include="InitializationModule.cs" />
     <Compile Include="Util\ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -186,6 +186,7 @@
       <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
+    <None Include="README.md" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
