--- a/EOls.EPiContentApi.csproj
+++ b/EOls.EPiContentApi.csproj
@@ -173,16 +173,17 @@
     <Compile Include="Converters\ContentAreaPropertyConverter.cs" />
     <Compile Include="Converters\ContentReferencePropertyConverter.cs" />
     <Compile Include="Converters\LinkItemCollectionPropertyConverter.cs" />
-    <Compile Include="Converters\PageReferencePropertyConverter.cs" />
     <Compile Include="Converters\PageTypePropertyConverter.cs" />
     <Compile Include="Converters\UrlPropertyConverter.cs" />
     <Compile Include="Extensions\EPiServerExtensions.cs" />
     <Compile Include="Interfaces\IApiPropertyConverter.cs" />
     <Compile Include="Interfaces\ICacheManager.cs" />
+    <Compile Include="Interfaces\IPropertyConverterManager.cs" />
     <Compile Include="Models\ContentModel.cs" />
     <Compile Include="Models\PropertyInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="InitializationModule.cs" />
+    <Compile Include="PropertyConverterManager.cs" />
     <Compile Include="Util\ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
