--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.2.0" targetFramework="net461" />
-  <package id="Castle.Windsor" version="3.2.0" targetFramework="net461" />
-  <package id="EPiServer.CMS.Core" version="9.5.0" targetFramework="net461" />
-  <package id="EPiServer.Framework" version="9.5.0" targetFramework="net461" />
+  <package id="Castle.Core" version="3.3.3" targetFramework="net461" />
+  <package id="Castle.Windsor" version="3.3.0" targetFramework="net461" />
+  <package id="EPiServer.CMS.Core" version="10.2.0" targetFramework="net461" />
+  <package id="EPiServer.Framework" version="10.2.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20710.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net461" />
@@ -11,8 +11,9 @@
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.20710.0" targetFramework="net461" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net461" />
-  <package id="structuremap-signed" version="3.1.6.186" targetFramework="net461" />
+  <package id="structuremap-signed" version="3.1.9.463" targetFramework="net461" />
 </packages>
