--- a/eols.EPiContentApi/packages.config
+++ b/eols.EPiContentApi/packages.config
@@ -16,4 +16,5 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net461" />
   <package id="structuremap.web-signed" version="3.1.6.186" targetFramework="net461" />
   <package id="structuremap-signed" version="3.1.9.463" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0" targetFramework="net461" />
 </packages>
