Create new nuget version

--- a/src/eols.EPiContentApi/EOls.EPiContentApi.csproj
+++ b/src/eols.EPiContentApi/EOls.EPiContentApi.csproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Attributes\ApiPropertyAttribute.cs" />
+    <Compile Include="Properties\VersionInfo.cs" />
     <Compile Include="Services\Cache\CacheService.cs" />
     <Compile Include="ContentController.cs" />
     <Compile Include="ContentSerializer.cs" />
