--- a/src/eols.EPiContentApi/packages.config
+++ b/src/eols.EPiContentApi/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Castle.Core" version="4.2.1" targetFramework="net461" />
   <package id="Castle.Windsor" version="4.1.0" targetFramework="net461" />
+  <package id="EOls.Serialization" version="1.1.0.6" targetFramework="net461" />
+  <package id="EPiSerializer" version="1.1.0.4" targetFramework="net461" />
   <package id="EPiServer.CMS.AspNet" version="11.3.1" targetFramework="net461" />
   <package id="EPiServer.CMS.Core" version="11.3.1" targetFramework="net461" />
   <package id="EPiServer.Framework" version="11.3.1" targetFramework="net461" />
@@ -15,7 +17,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="structuremap.web-signed" version="3.1.6.191" targetFramework="net461" />
   <package id="structuremap-signed" version="3.1.9.463" targetFramework="net461" />
   <package id="System.ComponentModel.Annotations" version="4.4.0" targetFramework="net461" />
